--- a/analise.ipynb
+++ b/analise.ipynb
@@ -772,6 +772,27 @@
     "    print(f\"{'='*80}\")\n",
     "    plot_variable_distribution(df, column)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e034b2e",
+   "metadata": {},
+   "source": [
+    "## 📊 Quadro Comparativo das Distribuições (`ear`, `oleo_bruto`, `ipca_admin`)\n",
+    "\n",
+    "| Aspecto                    | `ear`                                   | `oleo_bruto`                           | `ipca_admin`                                  |\n",
+    "|----------------------------|------------------------------------------|----------------------------------------|------------------------------------------------|\n",
+    "| **Forma da distribuição**  | Leve assimetria, possível bimodalidade   | Assimétrica à direita (cauda longa)    | Pico acentuado, caudas pesadas (**leptocúrtica**) |\n",
+    "| **Simetria**               | Leve assimetria                         | Assimetria positiva                    | Leve assimetria positiva                        |\n",
+    "| **Curtose (visual)**       | Moderada                                | Alta (concentração e cauda longa)      | Alta (distribuição muito pontuda e dispersa)    |\n",
+    "| **Outliers (boxplot)**     | Poucos ou nenhum                        | Alguns valores altos                   | Muitos outliers em ambas as caudas             |\n",
+    "| **Histograma**             | Duas regiões de concentração            | Concentrado entre 1200–2500, com cauda | Pico em 0, dispersão para os dois lados         |\n",
+    "| **QQ Plot**                | Desvio leve nas caudas                  | Desvio claro nas extremidades          | Desvio forte nas extremidades (caudas pesadas)  |\n",
+    "| **Shapiro-Wilk (estat.)**  | 0.9806                                  | 0.9636                                 | 0.8642                                          |\n",
+    "| **Shapiro-Wilk (valor-p)** | 0.0004 → rejeita normalidade            | 0.0000 → rejeita normalidade           | 0.0000 → rejeita normalidade                    |\n",
+    "| **Conclusão**              | **Não normal** (bimodal, leve assimetria)| **Não normal** (assimétrica, caudas)   | **Não normal** (caudas pesadas, outliers)       |\n",
+    "| **Sugestão de tratamento** | Não paramétrico ou separar por grupo    | Transformar (log/raiz), ou não paramétrico | Transformar (log, Box-Cox), modelos robustos     |\n"
+   ]
   }
  ],
  "metadata": {
