--- a/analise.ipynb
+++ b/analise.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "### 2. Metodologia\n",
     "\n",
-    "A metodologia adotada para a análise do impacto da oferta de energia elétrica armazenada como água nos reservatórios - (`ear`) e da produção de petróleo cru (`oleo_bruto`) sobre os preços da inflação brasileira medida pelo Índice Nacional de Preços ao Consumidor Amplo - (`ipca`) segue uma abordagem baseada em séries temporais mensais no período de 2000 a 2024, estruturada nas seguintes etapas:\n",
+    "A metodologia adotada para a análise do impacto da oferta de energia elétrica armazenada como água nos reservatórios - (`ear`) e da produção de petróleo cru (`oleo_bruto`) sobre a inflação brasileira medida pelo Índice Nacional de Preços ao Consumidor Amplo - (`ipca`) segue uma abordagem baseada em séries temporais mensais no período de 2000 a 2024, estruturada nas seguintes etapas:\n",
     "\n",
     "A. **Coleta de Dados**  \n",
     "   As séries temporais mensais de `ipca`, `ear` e `oleo_bruto` serão coletadas a partir de fontes oficiais, cobrindo o período de janeiro de 2000 a dezembro de 2024.\n",
@@ -976,7 +976,7 @@
     "\n",
     "Para isso, vamos primeiro entender o conceito de estacionariedade, vejamos: \n",
     "\n",
-    "*\"Em linhas gerais um processo estocástico será chamado de estacionário se sua média e variância forem constantes ao longo do tempo eo valor da covariancia entre os dois períodos de tempo depender apenas da distância, do intervalo ou da defasagem entre os dois periodos e não o tempo real ao qual a convariancia é computada\"* (GUJARATI, Damodar; PORTER, Dawn. Econometria básica. 5. ed. Porto Alegre: AMGH, 2009).\n",
+    "*\"Em linhas gerais um processo estocástico será chamado de estacionário se sua média e variância forem constantes ao longo do tempo eo valor da covariancia entre os dois períodos de tempo depender apenas da distância, do intervalo ou da defasagem entre os dois periodos e não o tempo real ao qual a covariancia é computada\"* (GUJARATI, Damodar; PORTER, Dawn. Econometria básica. 5. ed. Porto Alegre: AMGH, 2009).\n",
     "\n",
     "Um processo estocástico, por sua vez é: *\"Um processo aleatório ou estocástico é uma coleção de variáveis aleatórias ordenadas no tempo\"* (GUJARATI, Damodar; PORTER, Dawn. Econometria básica. 5. ed. Porto Alegre: AMGH, 2009).\n",
     "\n",
@@ -1124,9 +1124,11 @@
    "id": "6a8bf26b",
    "metadata": {},
    "source": [
-    "### 5 Análise Visual da Estacionariedade: Gráficos de Séries Temporais\n",
+    "#### .4.1 Análise Visual da Estacionariedade: Gráficos de Séries Temporais\n",
     "\n",
-    "Para complementar a análise formal do teste ADF, vamos visualizar graficamente as séries temporais. Isso nos permitirá observar visualmente se as séries apresentam características de não-estacionariedade, como tendências, mudanças de variância ao longo do tempo ou padrões sazonais persistentes."
+    "Para complementar a análise formal do teste ADF, vamos visualizar graficamente as séries temporais. Isso nos permitirá observar visualmente se as séries apresentam características de não-estacionariedade, como tendências, mudanças de variância ao longo do tempo ou padrões sazonais persistentes. O que se faz somente para fins ilustrativos, uma vez que o teste ADF já foi realizado e os resultados foram apresentados anteriormente.\n",
+    "\n",
+    "```python"
    ]
   },
   {
@@ -1423,7 +1425,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### 6. Tratamento de Variáveis\n",
+    "#### .4.2 Tratamento de Variáveis\n",
     "\n",
     "Nesta seção, realizaremos o tratamento das variáveis que apresentaram características de não-estacionariedade ou outros problemas identificados nas análises anteriores. O objetivo é preparar as séries temporais para a modelagem econométrica, garantindo que atendam aos requisitos necessários, como estacionariedade e estabilidade de variância.\n",
     "\n",
@@ -1852,7 +1854,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### 7. Análise de Correlação entre IPCA, EAR_Diff e Óleo Bruto (Log-Diferença)\n",
+    "### 5. Análise de Correlação entre IPCA, EAR_Diff e Óleo Bruto (Log-Diferença)\n",
     "\n",
     "Nesta seção, realizaremos uma análise de correlação entre as variáveis transformadas `ear_diff` (diferença da energia armazenada), `oleo_bruto_log_diff` (log-diferença da produção de óleo bruto) e o índice de preços ao consumidor amplo (`ipca`). \n",
     "\n",
@@ -2138,7 +2140,7 @@
    "id": "26276df9",
    "metadata": {},
    "source": [
-    "## 8. Introdução ao Modelo ARIMAX para Nossa Análise\n",
+    "## 6. Introdução ao Modelo ARIMAX para Nossa Análise\n",
     "\n",
     "O modelo ARIMAX (AutoRegressive Integrated Moving Average with eXogenous variables) é uma extensão do modelo ARIMA que incorpora variáveis exógenas ou independentes na modelagem de séries temporais. Enquanto o ARIMA modela uma série temporal baseando-se apenas em seus valores passados e erros de previsão, o ARIMAX permite que fatores externos também influenciem nas previsões.\n",
     "\n",
@@ -2195,7 +2197,7 @@
    "id": "345da6c1",
    "metadata": {},
    "source": [
-    "#### 8.1. Análise da Função de Autocorrelação Parcial (PACF) para IPCA\n",
+    "#### 6.1. Análise da Função de Autocorrelação Parcial (PACF) para IPCA\n",
     "\n",
     "Para determinar o valor adequado do parâmetro 'p' (componente autoregressivo) no modelo ARIMAX, precisamos analisar a Função de Autocorrelação Parcial (PACF) da variável dependente IPCA. A PACF nos mostra a correlação entre a série e suas próprias defasagens, eliminando os efeitos das defasagens intermediárias.\n",
     "\n",
@@ -2270,7 +2272,7 @@
    "id": "c9883e0e",
    "metadata": {},
    "source": [
-    "#### 8.2 Criação das Variáveis do Modelo Final\n",
+    "#### 6.2 Criação das Variáveis do Modelo Final\n",
     "\n",
     "Com base na análise de correlação cruzada realizada anteriormente, identificamos que as defasagens de 3 a 5 meses da variável `ear_diff` apresentam correlações mais significativas com o IPCA. As defasagens mais curtas (0 e 2 meses) apresentam correlações mais fracas e, portanto, não serão incluídas no modelo final.\n",
     "\n",
@@ -2508,7 +2510,7 @@
    "id": "3f60008d",
    "metadata": {},
    "source": [
-    "### 8.3 Modelagem SARIMAX\n",
+    "### 6.3 Modelagem SARIMAX\n",
     "\n",
     "Agora que temos nosso DataFrame `df_model` com as variáveis selecionadas, vamos aplicar o modelo SARIMAX (Seasonal AutoRegressive Integrated Moving Average with eXogenous variables) para analisar o impacto das variáveis explícativas sobre o IPCA.\n",
     "\n",
@@ -2663,7 +2665,7 @@
    "id": "6436d31a",
    "metadata": {},
    "source": [
-    "#### 8.4 Simplificação do Modelo ARIMAX\n",
+    "#### 6.4 Simplificação do Modelo ARIMAX\n",
     "\n",
     "Com base na análise dos resultados do modelo inicial, verificamos que algumas variáveis exógenas não apresentaram significância estatística. Para obter um modelo mais parcimonioso, vamos simplificar o modelo removendo as variáveis não significativas:\n",
     "\n",
@@ -2927,7 +2929,7 @@
    "id": "4e97d913",
    "metadata": {},
    "source": [
-    "### 9. Conclusões da Análise\n",
+    "### 7. Conclusões da Análise\n",
     "\n",
     "#### Impacto da Energia Armazenada na Inflação\n",
     "\n",
