inserindo descricao de estatisticas

--- a/data_science.ipynb
+++ b/data_science.ipynb
@@ -971,7 +971,44 @@
     "|-------------------|------------|---------------------------|------------------|\n",
     "| Estatística do teste | 0.9026   | 0.9870                    | 0.9356           |\n",
     "| Valor-p           | < 0.0001   | 0.0102                    | < 0.0001         |\n",
-    "| Conclusão         | Não normal | Não normal                | Não normal       |\n"
+    "| Conclusão         | Não normal | Não normal                | Não normal       |\n",
+    "\n",
+    "\n",
+    "### 📊 Descritivo e Análise dos Resultados\n",
+    "\n",
+    "####  Média e Mediana\n",
+    "- **Média**: Representa o valor médio das amostras.\n",
+    "- **Mediana**: Indica o valor central quando as amostras estão ordenadas.\n",
+    "- Para o **IPCA** e **Óleo Bruto**, a média e a mediana são próximas, sugerindo uma distribuição mais simétrica. No caso da **Energia Armazenada (EAR)**, a proximidade também indica uma tendência central consistente.\n",
+    "\n",
+    "####  Desvio Padrão e Variância\n",
+    "- **Desvio Padrão**: Mede a dispersão dos dados em torno da média.\n",
+    "- **Variância**: É o quadrado do desvio padrão e expressa a variabilidade dos dados.\n",
+    "- O **IPCA** apresenta baixa variabilidade (desvio padrão de 0.39), enquanto o **Óleo Bruto** possui alta dispersão (desvio padrão de 865.27), refletindo maiores flutuações nos preços de petróleo.\n",
+    "\n",
+    "####  Mínimo e Máximo\n",
+    "- Indicam os valores extremos dos dados.\n",
+    "- O **IPCA** varia entre -0.68 e 3.02, mostrando a amplitude de variações inflacionárias.\n",
+    "- A **Energia Armazenada** vai de 18.66 a 85.66, refletindo flutuações nos níveis de armazenamento.\n",
+    "- O **Óleo Bruto** apresenta a maior amplitude (de 1121 a 3734), o que destaca sua volatilidade.\n",
+    "\n",
+    "####  Assimetria\n",
+    "- Mede o grau de distorção da distribuição em relação à simetria.\n",
+    "- O **IPCA** tem assimetria positiva (1.5658), indicando uma cauda longa à direita (mais valores extremos elevados).\n",
+    "- A **EAR** está próxima da simetria (-0.19).\n",
+    "- O **Óleo Bruto** apresenta leve assimetria positiva (0.27), mas não tão marcante.\n",
+    "\n",
+    "#####  Curtose\n",
+    "- Indica o grau de achatamento da distribuição em relação a uma distribuição normal.\n",
+    "- O **IPCA** apresenta alta curtose (7.1580), sugerindo presença de muitos valores extremos (distribuição leptocúrtica).\n",
+    "- A **EAR** e o **Óleo Bruto** têm curtoses negativas, indicando distribuições mais achatadas que a normal (platicúrticas).\n",
+    "\n",
+    "####  Teste de Normalidade (Shapiro-Wilk)\n",
+    "- Avalia se os dados seguem uma distribuição normal.\n",
+    "- Todos os conjuntos (**IPCA**, **EAR** e **Óleo Bruto**) tiveram **valores-p baixos** (menores que 0.05), levando à rejeição da hipótese de normalidade.\n",
+    "- Isso confirma que as distribuições são **não normais** e podem exigir métodos não paramétricos ou transformações em análises posteriores.\n",
+    "\n",
+    "\n"
    ]
   },
   {
