--- a/data_science.ipynb
+++ b/data_science.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "\n",
     "\n",
-    "### <center>Autores: Ana Carolina Gomes; Diego Ribeiro Porto; Gabriel Neri e Costa; Joao Ribeiro Aiub; Luana Estevam Bruno Carvalho</center>\n",
+    "### <center>Autor: Diego Ribeiro Porto </center>\n",
     "\n",
     "<br>\n",
     "\n",
@@ -3102,7 +3102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
